# TODODODO

./: .gitignore  Cargo.toml  Makefile  README.md  deploy.sh  docker-compose.prod.yaml  docker-compose.yaml  justFile  kong-config.prod.yml  kong-config.yml  mprocs.yaml
account_service/: .env  Cargo.toml
account_service/.sqlx/: query-1870e5d2224986b349741042c8a28790ce63922e4754d905c62d15254e54d8c9.json  query-1cf99a091faa55a356d47880422e7dbbcdbd1b937a91856d1f5f79825e69c8d9.json  query-264b75fc5f5bcd9b3805155b63f9196ede88cbb1224bf61229328f0fc8988489.json  query-290330d242d6ffc848328ede8689e8a3759c7d193bfcee6f03bb2fbf4d8c78c3.json  query-34f7d40a158ff5dfe9816124aead90607a4d5b6e6dd6af157f09115f4ee0bb71.json  query-3a4fc3146e25807d4933aec7c5270c799433788d0999cad1e2cb6c25ef703d87.json  query-6f3ebb666d9c172bcb190e599e6b6c6b6ea7216b8063c5fd46c415b14653ff65.json  query-7223f14357a67420c1828be82a3324ee6f85b057b2f1086ba7c8a8b4ab0d2005.json  query-7d63e0710c3e8b93ba4d5fca883d99638b4a2db39781191a262fb0ce5904cd93.json  query-7f7170db75a03353ecdd5bdc7fb0fac355cd446f166baf4288f24d2dc26f54bf.json  query-88fbe80611b820b7e956c4ed04736728ebfe77d2f8b7df157bd7b182f12517dc.json  query-89e431c6f244e2bb72e943609c60a5131f48d5c342fe7cbe0192818987af828e.json  query-90dddb1712a5103e6fc508f2eb5b0929f2d65c4d8f86ee98a4c55459da68070a.json  query-a8ac5eb157873358cab35e73cb4d19870e0bffbaef5a00e44425806c55916fb7.json  query-b62270d8b908132067a740cc4fe222f08719bd04261c55569efafb077af5eb37.json  query-b9030b0d70a84939fd28634bcbec5975df4d44f2696fc67db45129b1409a6805.json  query-baa93e7ae7f203ab38f1f704e0c9dcb55306da595787086d0eeff9ac0bb0bde8.json  query-bf5afa6477246db4f640cc9ea0924cb23075c95378bfb02e07cd0c036d432dc2.json  query-c3a1723705d4a60cacdaa90fd6d8a7b783a655ad82daaaf083c4f3dfd5c20598.json  query-d3f769bac1ebe008902df123b63d4d75d477a03ea2b1fa4abcfc8f75267c2852.json  query-eb67268f8d846e139661d0084e0e837004f755a122152753e87147f31f0d9b47.json  query-f534ff6201d131d0f849c355e3b3421d7fa4d71f411173de99e0b93d13ce2841.json
account_service/migrations/: 20231023192732_create_account.down.sql  20231023192732_create_account.up.sql  20231031074540_create_community.down.sql  20231031074540_create_community.up.sql  20231031181927_create_invite_code.down.sql  20231031181927_create_invite_code.up.sql  20231112172341_alter_community_delete_cascade.down.sql  20231112172341_alter_community_delete_cascade.up.sql  20231113180053_create_community_task.down.sql  20231113180053_create_community_task.up.sql
account_service/src/: handlers.rs  jwt.rs  main.rs  models.rs
gengrpc/: Cargo.toml  README.md  build.rs
gengrpc/proto/: notification.proto  performance.proto  task.proto
gengrpc/src/: lib.rs
notification_service/: .env  Cargo.toml  build.rs
notification_service/.sqlx/: query-862d65903beee0143c2cbd404749336d92265ce819fc0ba3b75fe2a0c8f77e43.json  query-bcd8d1c2a8855b302e87e31166a2061e9626f7223b28d073cd926adf2c993955.json  query-fe4f930b7e190280f2b8d46bb4073d32153217141d75441c1d162f6dd82cb1b7.json
notification_service/migrations/: 20231107031333_create_webhook.down.sql  20231107031333_create_webhook.up.sql
notification_service/src/: handler.rs  main.rs  noti.rs
task_service/: .env  Cargo.toml  build.rs
task_service/.sqlx/: query-00b74c2db0ecf9fe160baf52440385b0a32498e4b6adeab067e088341856c70b.json  query-039d824d94f8db24952c05084e32a6a73a01087c50d47c39cffb317bedf3d125.json  query-06a7a0ab24ea6fa7f92a5d94d670ba2bfb9cd454897157691eabb4de45e07818.json  query-0787fa36ca235e60a4776587c11a8b9fc2f841ddaa8e1c27d285debc4cf54942.json  query-149fa9fa12356ec843b9e17c1703a02ecad97b804230f3831dc324f5e4bdeed5.json  query-238beca60f206a4015be6d1567c0a72ed96a7b36eb81d29a9ef035e6aba94b16.json  query-31b1a1903e684722d658ee9d9030eed96006cd289dae4941049ec587e80795bf.json  query-36b23441a28b38fe341a7638e2bc9ea1893087edf0837301acff2fbe320d770f.json  query-3801fc849144195fb733e93a83de0d24c10acc4d97bb9387f1a24b844c8244cd.json  query-48f6ae91fb8c02fd37c81b1cf86aa3db98c269c8448540d8881fac72380b043f.json  query-53bb3599f45dac91bb03fadac9b3421f30333ec544d8639cf9322333ec3d8c28.json  query-5a88652f8841a78ea0b1b6c35fab0a496c8124a700a8cb8afa1f204597e6de6f.json  query-62bdc647521c389cdbbe6e84da79a23761a8b833c8baf5959021e7e8b739147d.json  query-6506eb8f2d774371706843c8964e35da1437f3f75ba6ca82db88e17e0b169e1a.json  query-677e1d366ce614a19aa5810ec60aeb0630c56c78a0fc2708db9ef56d2d782c11.json  query-6b87a9723a46a4afa4c13f9378b7bbd2e7dc11112d80fab5025bac4f6c087b6c.json  query-6da5272ba17b0b47e98182b6a9422cc1eb284c69f7a20f2600f1f18a19f727e6.json  query-6fcd596509d8479ece49a333c207ba4194c26dde63cdc1109628df59dc089427.json  query-75933739449fe6935cdd95a87c50796451c1d02a2aa74093b71d72b036b58a03.json  query-781465ba922ef3b9ad172472882bf822ac60201428e8f54974bce64aff48111d.json  query-870ac8c4937c818e3af46a88ee118cc42a019d353540b83f80464b94686e7c98.json  query-8804263e6928d606829882635d5cbc60dbe3bfd7ce1ada49d4c69c176f6b14dc.json  query-8f5565a3a0a8c36fc8f9820b9a246e9f154f6a31d7c7e648300cb344171bed5e.json  query-9e43fd946b18bab1cf452ad5dce4506141f87a8cb5687765ee5f91c7ced156e7.json  query-a269438ff4c5554c1e9100c1c39578bf7c6f6a8efebaa76a6ae42530d0f72982.json  query-a69ecc597fd1b23ed48c33d9a9bf7cc6ba0d7910dad2f4b647c58a3e4e3f94c3.json  query-a87597815d4d94349cd46fbf1d5d8dd36c84c9f3fcf63bddd257bd596dadbe55.json  query-b1f6453252825a84e16f26c7fe2875cd044927b9a2ef778151ea299b01e37f7f.json  query-c1340e0a1334cc9efd2681280520a5c62a9f02c73b0b8ba9e0c5b9c0896beca6.json  query-c523500f9fa67f2a8f96052e2a87929bc09e8ec18d0ef1379e14758145977bc5.json  query-c69af16888ffa2d037314189f2b9cbdcfaeee5f852eb7783a2c3410bfc1a98cf.json  query-cd6a98c8072b3082a1f995cc517f407c0a36f28b1f7eb9aa8be83a2cdbdea90f.json  query-d1ba97470ff6f6043be751f091b9f05249b175414da8393c626da09b9d62c039.json  query-d5b3b57da3ea20f7cffd0bdccf2e0a2d5da3e54b56acbf0e50ad7bd5605140f9.json  query-e487c87c1d0bd0a44bb86843119ba09d02ef4e642e03ba0742ee1f525c1705f1.json  query-f09e914ead6628440dc46d85a6a25591d0ea90860d42829a6e1a89bdd8992e8f.json  (+5 more)
tracing-mongo/: Cargo.toml
viz_service/: .env  Cargo.toml
(+51 files in other folders)
