[package]
name = "account_service"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { workspace = true }
poem-openapi = { workspace = true }
poem-grpc = { workspace = true }

time = { workspace = true }
uuid = { workspace = true }

sqlx = { workspace = true }

color-eyre = {workspace = true}
dotenvy = {workspace = true}
envy = {workspace = true}
serde = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tracing-appender = {workspace = true}

gengrpc = {path = "../gengrpc"}
tracing-mongo = {path = "../tracing-mongo"} 

jsonwebtoken = {version="9", default-features = false}
argon2 = "0.5.2"
thiserror = "1.0.50"
