[package]
name = "gengrpc"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = {workspace = true}
poem-grpc = {workspace = true}
prost = "0.11"
prost-types = "0.11"

[build-dependencies]
poem-grpc-build = "0.2.22"