[package]
name = "notification_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { workspace = true }
poem-openapi = { workspace = true }
poem-grpc = { workspace = true }

color-eyre = {workspace = true}
dotenvy = {workspace = true}
envy = {workspace = true}
serde = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}

gengrpc = {path = "../gengrpc"}
 