[package]
name = "notification_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { workspace = true }
poem-openapi = { workspace = true }

uuid = { workspace = true }
time = { workspace = true }
url = { workspace = true }

sqlx = { workspace = true }

color-eyre = {workspace = true}
dotenvy = {workspace = true}
envy = {workspace = true}
serde = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}

tracing-mongo = {path = "../tracing-mongo"}

webhook = "2.1.2" 
serde_json = "1.0"
futures-lite = "1.13.0"
lapin = "2.0"
