[package]
name = "task_service"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.57", features = ["test"] }
poem-openapi = { version = "3.0.3", features = ["openapi-explorer", "uuid", "time"] }
poem-grpc = "0.2"
prost = "0.11"
prost-types = "0.11"

uuid = { version = "1.4.1", features = ["v4", "serde"] }
time = "0.3.28"

sqlx = { version = "0.7.1", features = ["runtime-tokio", "macros", "postgres", "time", "uuid"] }

structmapper = "0.4.2"
# diff-struct = "0.5.3"

color-eyre = "0.6.2"
dotenvy = "0.15.7"
envy = "0.4.2"
serde = "1.0.188"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[build-dependencies]
poem-grpc-build = "0.2.22"
