[package]
name = "task_service"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { workspace = true }
poem-openapi = { workspace = true }
poem-grpc = { workspace = true }

uuid = { workspace = true }
time = { workspace = true }

sqlx = { workspace = true }

structmapper = "0.4.2"
# diff-struct = "0.5.3"

color-eyre = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

gengrpc = { path = "../gengrpc" }
tracing-mongo = { path = "../tracing-mongo" }

serde_json = "1.0"
lapin = "2.0"

prost = "0.7"
prost-types = "0.7"
